remove comma in ansible-playbook command

--- a/hackathons/rhte-2018-emea/example-pipeline/Jenkinsfile
+++ b/hackathons/rhte-2018-emea/example-pipeline/Jenkinsfile
@@ -10,7 +10,7 @@ pipeline {
 
         stage('Syntax Check') {
             steps {
-                sh  "ansible-playbook -i app1, hackathons/rhte-2018-emea/playbook-ansible-role-banner.yaml --syntax-check"
+                sh  "ansible-playbook -i app1 hackathons/rhte-2018-emea/playbook-ansible-role-banner.yaml --syntax-check"
             }
         }
 
@@ -22,7 +22,7 @@ pipeline {
 
         stage('Execute Playbook') {
             steps {
-                sh  "ansible-playbook -u ec2-user -i app1, hackathons/rhte-2018-emea/playbook-ansible-role-banner.yaml"
+                sh  "ansible-playbook -u ec2-user -i app1 hackathons/rhte-2018-emea/playbook-ansible-role-banner.yaml"
             }
         }
     }
